--- a/src/main/index.css
+++ b/src/main/index.css
@@ -2,9 +2,6 @@
     margin: 0;
     padding: 0;
 }
-body {
-    height: 1500px;
-}
 #header {
     height: 64px;
     display: flex;
@@ -12,7 +9,7 @@ body {
     border-bottom: 1px solid black;
 }
 #body {
-    height: 100%;
+    height: 100vh;
     width: 1024px;
     margin: 0 auto; /*부모로 부터 중앙 정렬*/
     padding-bottom: 24px;
@@ -81,4 +78,8 @@ body {
 }
 .product-avatar {
     width: 24px;
+}
+.product-link {
+    color: inherit;
+    text-decoration: none;
 }
