업로드 구현

--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@ html, body, #root, #root > div {
   height: 36px;
 }
 #body {
-  height: 100vh;
+  min-height: 100vh;
   width: 1024px;
   margin: 0 auto; /*부모로 부터 중앙 정렬*/
   padding-bottom: 24px;
