--- a/src/main/index.css
+++ b/src/main/index.css
@@ -46,7 +46,6 @@
 .product-seller {
     display: flex;
     align-items: center;
-    margin-top: 12px;
 }
 .product-avatar {
     width: 24px;
@@ -54,4 +53,16 @@
 .product-link {
     color: inherit;
     text-decoration: none;
+}
+
+.product-footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 12px;
+}
+
+.product-date {
+    font-size: 12px;
+    color: royalblue;
 }
