--- a/src/main/index.css
+++ b/src/main/index.css
@@ -2,7 +2,6 @@
 
 #banner {
     height: 300px;
-    background-color: yellow;
 }
 
 
@@ -29,6 +28,7 @@
 .product-img {
     width: 100%;
     height: 210px;
+    object-fit: contain;
 }
 .product-contents {
     display: flex;
@@ -65,4 +65,7 @@
 .product-date {
     font-size: 12px;
     color: royalblue;
+}
+#product-headline {
+    margin-top: 8px;
 }
