--- a/src/App.css
+++ b/src/App.css
@@ -27,11 +27,26 @@ html, body, #root, #root > div {
 }
 #body {
   min-height: 100vh;
-  width: 1024px;
+  max-width: 1024px;
+  width: 100%;
   margin: 0 auto; /*부모로 부터 중앙 정렬*/
   padding-bottom: 24px;
 }
 #footer {
   height: 200px;
   background-color: blue;
+}
+@media screen and (max-width: 400px) {
+  .product-card {
+    width: 160px p !important;
+  }
+  #header {
+    padding: 0 8px;
+  }
+  #body {
+    padding: 0 8px;
+  }
+  .ant-carousel {
+    margin: 0 -8px;
+  }
 }
