--- a/src/main/index.css
+++ b/src/main/index.css
@@ -1,13 +1,13 @@
 
 
 #banner {
-    height: 300px;
+    max-height: 300px;
 }
 
 
 #banner > img {
     width: 100%;
-    height: 300px;
+    max-height: 300px;
 }
 #body > h1 {
     margin-top: 16px;
@@ -24,7 +24,19 @@
     margin-bottom: 12px;
     border: 1px solid rgb(230, 230, 230);
     border-radius: 12px;
+    position: relative;
 }
+
+.product-blur {
+    position: absolute;
+    top : 0;
+    left : 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ffffffaa;
+    pointer-events: none;
+}
+
 .product-img {
     width: 100%;
     height: 210px;
